@@ -1,3 +1,7 @@
+2009-07-09  Doug Evans  <dje@sebabeach.org>
+
+	* utils.scm (message): Handle pairs.
+
 2009-07-08  DJ Delorie  <dj@redhat.com>
 
 	* cpu/mep-ivc2.cpu (cpmovtocsar0_C3, cpmovtocsar1_C3,
